[package]
name = "tmp-wx-operator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio / Futures
async-trait = "0.1.50"
futures = { version = "0.3.15", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.8.1", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.2", default-features = false }
tokio-stream = { version = "0.1.7", default-features = false, features = ["net", "sync"] }
tokio-util = { version = "0.6.7", default-features = false, features = ["codec", "time"] }

# Tracing
tracing = { version = "0.1.26", default-features = false }
tracing-core = { version = "0.1.18", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
tracing-log = { version = "0.1.2", default-features = false }
tracing-subscriber = { version = "0.2.19", default-features = false }
tracing-tower = { git = "https://github.com/tokio-rs/tracing", default-features = false, rev = "f470db1b0354b368f62f9ee4d763595d16373231" }
tracing-opentelemetry = { version = "0.13.0", default-features = false }
opentelemetry = { version = "0.14.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-datadog = { version = "0.2.0", default-features = false, features = ["reqwest-client"] }

# Metrics
metrics = { version = "0.16.0", default-features = false, features = ["std"] }
metrics-tracing-context = { version = "0.6.0", default-features = false }
metrics-util = { version = "0.9.1", default-features = false, features = ["std"] }

# K8s
kube = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }


